--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravelcollective/html": "^6.0",
         "laraveldaily/laravel-charts": "^0.1.10",
         "laravolt/avatar": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-html": "^2.24",
         "spatie/laravel-medialibrary": "^7.12",
         "yajra/laravel-datatables-oracle": "^9.7"
